<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ActivityBackgroundColor"
        tools:context=".activities.AuthenticationActivity">


        <TextView
            android:id="@+id/emailLabel"
            style="@style/label"
            android:layout_marginTop="150dp"
            android:text="@string/Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            style="@style/editText"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLabel" />

        <TextView
            android:id="@+id/emailFeedbackMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="12dp"
            android:textColor="@color/com_facebook_messenger_blue"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/passwordLabel"
            style="@style/label"
            android:layout_marginTop="32dp"
            android:text="@string/Password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <EditText
            android:id="@+id/password"
            style="@style/editText"
            android:layout_marginBottom="40dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel" />

        <TextView
            android:id="@+id/passFeedbackMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="12dp"
            android:textColor="@color/com_facebook_messenger_blue"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:background="@color/orange"
            android:text="@string/signIn"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/OR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signIn" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/createAccount"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/forgetPass"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passFeedbackMsg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUp">

            <Button
                android:id="@+id/facebookLoginButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/com_facebook_button_icon_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUp"

                />


            <Button
                android:id="@+id/signUpWithGoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/facebookLoginButton" />


            <Button
                android:id="@+id/phoneSignIn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_phone_black_24dp"
                android:backgroundTint="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpWithGoogle" />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</layout>